# rustitect

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: rust.yml
resources/: simple_struct.adoc  simple_struct.rs
src/: asciidoc_parser.rs  class_object.rs  cli.rs  main.rs  model.rs  parser.rs  plantuml_parser.rs  processing.rs  rust_doc_parser.rs
src/model/: class_object.rs
src/parser/: asciidoc_parser.rs  plantuml_parser.rs  rust_doc_parser.rs
tests/: create_asciidoc_integration_tests.rs
tests/resources/: simple_struct.adoc  simple_struct.puml  simple_struct.rs  simple_struct_puml.adoc
