[package]
name = "rustitect"
version = "0.1.0"
edition = "2021"
authors = ["Kay Fichtelmann <kay.fichtelmann@frauscher.com>"]
description = "A tool to generate Rust code from a given architecture description"
license = "MIT"

[dependencies]
ruml = { git = "https://github.com/fichtelmann/ruml.git", branch = "add_methods" }

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.syn]
version = "1.0.5"
features = [
    "parsing",
    "visit",
]

[dependencies.regex]
version = "1"
default-features = false
features = [
    "std",
    "perf-inline",
    "perf-literal"
]
